Functional Exception handling code refactored with method references for brevity java version for project updated to 22